# ai-news-aggregator

./: .gitignore  .python-version  README.md  TASKS.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3ef7b5997f2a_add_cleaned_content_to_source_tables.py  6f4f1a9c2d3e_remove_legacy_digest_table_and_fields.py  9771fd7ad96f_add_indexes_for_pipeline_status_fields.py  9bbfe748567a_add_story_tables.py  b0f6b2d4a1c9_add_user_profiles_table.py  c557f5e6e8d2_add_story_digests_and_status_fields.py  e39c208594c2_add_status_and_content_metadata_fields.py  f19c3e7b8d42_add_pipeline_and_newsletter_runs.py
app/: config.py  content_normalization.py  daily_runner.py  logging_config.py  runner.py  settings.py  story_clustering.py  story_digesting.py  test.py
app/agent/: curator_agent.py  digest_agent.py  email_agent.py  story_digest_agent.py
app/api/: dependencies.py  main.py  schemas.py
app/database/: connection.py  create_tables.py  models.py  repository.py
app/profiles/: manage_profiles.py  profile_store.py  (+1 more)
docker/: docker-compose.yaml
frontend/: index.html  package-lock.json  package.json
tests/: conftest.py  test_api.py  test_content_normalization.py  test_curator_agent.py  test_daily_runner_smoke.py  test_dashboard_repository.py  test_email_service.py  test_manage_profiles.py  test_openai_scraper.py  test_process_digest.py  test_process_email.py  test_process_story_clusters.py  test_process_story_digests.py  test_profile_store.py  test_repository.py  test_settings.py  test_story_clustering.py  test_story_digesting.py  test_youtube_scraper.py
(+28 files in other folders)
